<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".login.ActivityRegisterGui"
        android:background="#B1D4E0">

    <TextView
            android:text="@string/gs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView5"
            android:fontFamily="@font/catamaran_medium" android:textSize="30sp"
            android:textColor="@color/uoftcoloourr" android:textColorHint="@color/uoftcoloourr"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="115dp"
            android:layout_marginLeft="50dp" android:layout_marginStart="50dp"/>
    <TextView
            android:text="@string/wy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView6"
            android:fontFamily="@font/catamaran_medium" android:textSize="30sp"
            android:textColor="@color/uoftcoloourr" android:textColorHint="@color/uoftcoloourr"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            android:layout_marginLeft="9dp" android:layout_marginStart="9dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="115dp"/>
    <TextView
            android:text="@string/uoftemail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView7"
            android:fontFamily="@font/catamaran_semibold" android:textSize="30sp"
            android:textColor="@color/uoftcoloourr" android:textColorHint="@color/uoftcoloourr"
            app:layout_constraintTop_toBottomOf="@+id/textView5" android:layout_marginTop="-15dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp"/>
    <TextView
            android:text="@string/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView8"
            android:textColor="@color/uoftcoloourr" android:textColorHint="@color/uoftcoloourr"
            android:fontFamily="@font/catamaran_medium" android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="50dp" android:layout_marginStart="50dp"
            android:layout_marginTop="10dp" app:layout_constraintTop_toBottomOf="@+id/nicknameInput"
    />
    <EditText
            android:autofillHints="@string/email_input"
            android:layout_width="315dp"
            android:layout_height="50dp"
            android:hint="@string/email_input"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/email_input"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp" android:layout_marginEnd="50dp" android:layout_marginRight="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:fontFamily="@font/catamaran_light" android:textColor="@color/darkgrey"
            android:textColorHint="@color/darkgrey" app:layout_constraintTop_toBottomOf="@+id/textView8"
            android:layout_marginTop="5dp" app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="@string/Username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView9"
            android:textColor="@color/uoftcoloourr" android:textColorHint="@color/uoftcoloourr"
            android:fontFamily="@font/catamaran_medium" android:textSize="18sp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            android:layout_marginBottom="30dp" app:layout_constraintBottom_toTopOf="@+id/nicknameInput"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp"/>

    <com.google.android.material.textfield.TextInputEditText
            android:layout_width="315dp"
            android:layout_height="50dp"
            android:hint="@string/uname"
            android:id="@+id/nicknameInput" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="50dp" android:layout_marginStart="50dp" android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp" app:layout_constraintEnd_toEndOf="parent"
            android:fontFamily="@font/catamaran_light" android:textColor="@color/darkgrey"
            android:textColorHint="@color/darkgrey" android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/textView9"/>
    <EditText
            android:autofillHints="@string/pwnc"
            android:layout_width="315dp"
            android:layout_height="50dp"
            android:hint="@string/pwnc" android:inputType="textPassword"
            android:fontFamily="@font/catamaran_light" android:textColor="@color/darkgrey"
            android:textColorHint="@color/darkgrey"
            android:ems="10"
            android:id="@+id/newUserPassword"
            app:layout_constraintTop_toBottomOf="@+id/textView10"
            android:layout_marginTop="5dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="50dp" android:layout_marginStart="50dp"/>
    <TextView
            android:text="@string/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView10"
            android:fontFamily="@font/catamaran_medium" android:textSize="18sp"
            android:textColor="@color/uoftcoloourr" android:textColorHint="@color/uoftcoloourr"
            app:layout_constraintTop_toBottomOf="@+id/email_input"
            android:layout_marginTop="20dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="50dp" android:layout_marginStart="50dp"/>
    <Button
            android:text="@string/Signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/registerButton"
            app:backgroundTint="@color/uoftcoloourr"
            app:layout_constraintTop_toBottomOf="@+id/newUserPassword" android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="150dp"
            android:layout_marginStart="150dp" android:layout_marginEnd="150dp" android:layout_marginRight="150dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.434"/>
    <TextView
            android:text="@string/account_with_the_same_username_or_email_exists"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/same_acc_text"
            android:textColor="@color/design_default_color_error"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp" android:layout_marginEnd="50dp" android:layout_marginRight="50dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintTop_toBottomOf="@+id/registerButton" android:layout_marginTop="10dp"
            android:visibility="invisible"/>
</androidx.constraintlayout.widget.ConstraintLayout>