<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".community.Community" android:background="#B1D4E0">


    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/community"
            android:fontFamily="@font/catamaran_semibold" android:textSize="30sp"
            android:textColor="@color/uoftcoloourr" android:textColorHint="@color/uoftcoloourr"
            android:gravity="start|top"
            android:ems="10"
            android:id="@+id/communitytext" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="40dp" android:layout_marginStart="40dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="80dp"/>


    <ScrollView
            android:layout_width="300dp" android:layout_height="100dp"
            android:fillViewport="false"
            tools:ignore="MissingConstraints"
            app:layout_constraintTop_toBottomOf="@+id/communitytext"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="20dp"
            app:layout_constraintHorizontal_bias="0.495">
        <LinearLayout
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:orientation="vertical">

            <TextView
                    android:text="@string/Post1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView22"
                    android:fontFamily="@font/catamaran_medium" android:textSize="20sp"
                    android:textColor="@color/uoftcoloourr" android:textColorHint="@color/uoftcoloourr"/>
            <TextView
                    android:text="@string/Post2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView23"
                    android:fontFamily="@font/catamaran_medium" android:textSize="20sp"
                    android:textColorHint="@color/uoftcoloourr" android:textColor="@color/uoftcoloourr"/>
            <TextView
                    android:text="@string/Post3"
                    android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:id="@+id/textView24" android:fontFamily="@font/catamaran_medium"
                    android:textSize="20sp" android:textColor="@color/uoftcoloourr"
                    android:textColorHint="@color/uoftcoloourr"/>
            <TextView
                    android:text="@string/Post4"
                    android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:id="@+id/textView25" android:fontFamily="@font/catamaran_medium"
                    android:textSize="20sp" android:textColor="@color/uoftcoloourr"
                    android:textColorHint="@color/uoftcoloourr"/>
            <TextView
                    android:text="@string/Post5"
                    android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:id="@+id/textView26" android:fontFamily="@font/catamaran_medium"
                    android:textSize="20sp" android:textColor="@color/uoftcoloourr"
                    android:textColorHint="@color/uoftcoloourr"/>
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
            android:layout_width="420dp"
            android:layout_height="100dp"
            app:backgroundTint="#B1D4E0" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="-20dp" android:id="@+id/bottomNavigationView">
        <Button
                android:text="@string/nothing"
                android:layout_width="50dp"
                android:layout_height="60dp" android:id="@+id/homebutton"
                android:layout_marginLeft="30dp" android:layout_marginStart="50dp" android:layout_marginBottom="20dp"
                app:backgroundTint="@color/white"/>
        <Button
                android:text="@string/nothing"
                android:layout_width="50dp"
                android:layout_height="60dp" android:id="@+id/eventbutton"
                android:layout_marginLeft="30dp" android:layout_marginStart="140dp" android:layout_marginBottom="20dp"
                app:backgroundTint="@color/white"/>
        <Button
                android:text="@string/nothing"
                android:layout_width="50dp"
                android:layout_height="60dp" android:id="@+id/communitybutton"
                android:layout_marginLeft="30dp" android:layout_marginStart="230dp" android:layout_marginBottom="20dp"
                app:backgroundTint="@color/uoftcoloourr"/>
        <Button
                android:text="@string/nothing"
                android:layout_width="50dp"
                android:layout_height="60dp" android:id="@+id/mebutton"
                android:layout_marginLeft="30dp" android:layout_marginStart="320dp" android:layout_marginBottom="20dp"
                app:backgroundTint="@color/white"/>
    </com.google.android.material.bottomnavigation.BottomNavigationView>


</androidx.constraintlayout.widget.ConstraintLayout>