<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".event.CreatingEvent" android:background="@color/white">

    <Button
            android:text="@string/createevent"
            android:layout_width="118dp" android:layout_height="45dp"
            android:id="@+id/createingeventbutton"
            app:backgroundTint="@color/greyy" android:fontFamily="@font/catamaran_medium"
            android:textSize="13sp" android:textColor="@color/darkgrey" android:textColorHint="@color/darkgrey"
            android:layout_alignTop="@+id/categorizing" android:layout_marginTop="150dp"
            android:layout_centerInParent="true">
    </Button>

    <TextView
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/addingevent" android:id="@+id/createventtextview"
            android:fontFamily="@font/catamaran_semibold" android:textSize="32sp"
            android:textColor="@color/uoftcoloourr" android:textColorHint="@color/uoftcoloourr"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="35dp" >
    </TextView>

    <View
            android:layout_width="350dp" android:layout_height="1dp"
            android:background="@color/greyy" android:id="@+id/horizontalline"
            android:layout_centerHorizontal="true"
            android:layout_alignBottom="@+id/createventtextview" android:layout_marginBottom="-10dp"
            android:layout_centerInParent="true">
    </View>

    <TextView
            android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/eventtitle"
            android:text="@string/eventname" android:textColor="@color/uoftcoloourr"
            android:textColorHint="@color/uoftcoloourr"
            android:fontFamily="@font/catamaran_light" android:textSize="20sp"
            android:layout_alignTop="@id/horizontalline" android:layout_marginTop="25dp"
            android:layout_marginLeft="50dp" android:layout_marginStart="50dp">
    </TextView>

    <EditText
            android:layout_width="320dp" android:layout_height="30dp"
            android:id="@+id/puttingevent" android:autofillHints="@string/eventname"
            android:inputType="textShortMessage" android:background="@drawable/button_border"
            android:text="@string/nothing" android:ems="10"
            android:fontFamily="@font/catamaran_light" android:textSize="15sp"
            android:textColor="@color/darkgrey" android:textColorHint="@color/darkgrey"
            android:layout_alignTop="@+id/eventtitle" android:layout_marginTop="45dp"
            android:layout_centerInParent="true" tools:ignore="LabelFor">
    </EditText>

    <TextView
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:id="@+id/eventdescription"
            android:text="@string/description" android:textColor="@color/uoftcoloourr"
            android:textColorHint="@color/uoftcoloourr"
            android:fontFamily="@font/catamaran_light" android:textSize="20sp"
            android:layout_alignTop="@id/puttingevent" android:layout_marginTop="45dp"
            android:layout_marginLeft="50dp" android:layout_marginStart="50dp">
    </TextView>

    <EditText
            android:layout_width="320dp" android:layout_height="30dp"
            android:id="@+id/puttingdescription" android:autofillHints="@string/description"
            android:inputType="textShortMessage" android:background="@drawable/button_border"
            android:text="@string/nothing" android:ems="10"
            android:fontFamily="@font/catamaran_light" android:textSize="15sp"
            android:textColor="@color/darkgrey" android:textColorHint="@color/darkgrey"
            android:layout_alignTop="@+id/eventdescription" android:layout_marginTop="45dp"
            android:layout_centerInParent="true" tools:ignore="LabelFor">
    </EditText>

    <TextView
            android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/eventdate"
            android:text="@string/eventdate" android:textColor="@color/uoftcoloourr"
            android:textColorHint="@color/uoftcoloourr"
            android:fontFamily="@font/catamaran_light" android:textSize="20sp"
            android:layout_alignTop="@id/puttingdescription" android:layout_marginTop="45dp"
            android:layout_marginLeft="50dp" android:layout_marginStart="50dp">
    </TextView>

    <TextView
            android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/eventdate2"
            android:text="@string/date" android:textColor="@color/uoftcoloourr"
            android:textColorHint="@color/uoftcoloourr"
            android:fontFamily="@font/catamaran_light" android:textSize="15sp"
            android:layout_alignTop="@id/puttingdescription" android:layout_marginTop="52dp"
            android:layout_marginLeft="103dp" android:layout_marginStart="103dp">
    </TextView>

    <EditText
            android:layout_width="150dp" android:layout_height="30dp"
            android:id="@+id/puttingdate" android:autofillHints="@string/description"
            android:inputType="textShortMessage" android:background="@drawable/button_border"
            android:text="@string/nothing" android:ems="10"
            android:fontFamily="@font/catamaran_light" android:textSize="15sp"
            android:textColor="@color/darkgrey" android:textColorHint="@color/darkgrey"
            android:layout_alignTop="@+id/eventdate" android:layout_marginTop="45dp"
            android:layout_marginLeft="48dp"
            tools:ignore="LabelFor" android:layout_marginStart="48dp">
    </EditText>

    <TextView
            android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/eventtime"
            android:text="@string/eventtime" android:textColor="@color/uoftcoloourr"
            android:textColorHint="@color/uoftcoloourr"
            android:fontFamily="@font/catamaran_light" android:textSize="20sp"
            android:layout_alignTop="@id/puttingdescription" android:layout_marginTop="45dp"
            android:layout_marginLeft="215dp" android:layout_marginStart="215dp">
    </TextView>

    <EditText
            android:layout_width="150dp" android:layout_height="30dp"
            android:id="@+id/puttingtime" android:autofillHints="@string/description"
            android:inputType="textShortMessage" android:background="@drawable/button_border"
            android:text="@string/nothing" android:ems="10"
            android:fontFamily="@font/catamaran_light" android:textSize="15sp"
            android:textColor="@color/darkgrey" android:textColorHint="@color/darkgrey"
            android:layout_alignTop="@+id/eventdate" android:layout_marginTop="45dp"
            android:layout_marginLeft="215dp"
            tools:ignore="LabelFor" android:layout_marginStart="215dp">
    </EditText>

    <TextView
            android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/category"
            android:text="@string/category" android:textColor="@color/uoftcoloourr"
            android:textColorHint="@color/uoftcoloourr"
            android:fontFamily="@font/catamaran_light" android:textSize="20sp"
            android:layout_alignTop="@id/puttingdate" android:layout_marginTop="45dp"
            android:layout_marginLeft="50dp" android:layout_marginStart="50dp">
    </TextView>

    <EditText
            android:layout_width="320dp" android:layout_height="30dp"
            android:id="@+id/categorizing" android:autofillHints="@string/description"
            android:inputType="textShortMessage" android:background="@drawable/button_border"
            android:text="@string/nothing" android:ems="10"
            android:fontFamily="@font/catamaran_light" android:textSize="15sp"
            android:textColor="@color/darkgrey" android:textColorHint="@color/darkgrey"
            android:layout_alignTop="@+id/category" android:layout_marginTop="45dp"
            android:layout_centerInParent="true" tools:ignore="LabelFor">
    </EditText>

    <TextView
            android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/coursecode"
            android:text="@string/code" android:textColor="@color/uoftcoloourr"
            android:textColorHint="@color/uoftcoloourr"
            android:fontFamily="@font/catamaran_light" android:textSize="20sp"
            android:layout_alignTop="@id/categorizing" android:layout_marginTop="45dp"
            android:layout_marginLeft="50dp" android:layout_marginStart="50dp">
    </TextView>

    <EditText
            android:layout_width="150dp" android:layout_height="30dp"
            android:id="@+id/puttingcoursecode" android:autofillHints="@string/description"
            android:inputType="textShortMessage" android:background="@drawable/button_border"
            android:text="@string/nothing" android:ems="10"
            android:fontFamily="@font/catamaran_light" android:textSize="15sp"
            android:textColor="@color/darkgrey" android:textColorHint="@color/darkgrey"
            android:layout_alignTop="@+id/coursecode" android:layout_marginTop="45dp"
            android:layout_marginLeft="48dp"
            tools:ignore="LabelFor" android:layout_marginStart="48dp">
    </EditText>

    <TextView
            android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/location"
            android:text="@string/location" android:textColor="@color/uoftcoloourr"
            android:textColorHint="@color/uoftcoloourr"
            android:fontFamily="@font/catamaran_light" android:textSize="20sp"
            android:layout_alignTop="@id/categorizing" android:layout_marginTop="45dp"
            android:layout_marginLeft="215dp" android:layout_marginStart="215dp">
    </TextView>

    <EditText
            android:layout_width="150dp" android:layout_height="30dp"
            android:id="@+id/puttinglocation" android:autofillHints="@string/description"
            android:inputType="textShortMessage" android:background="@drawable/button_border"
            android:text="@string/nothing" android:ems="10"
            android:fontFamily="@font/catamaran_light" android:textSize="15sp"
            android:textColor="@color/darkgrey" android:textColorHint="@color/darkgrey"
            android:layout_alignTop="@+id/location" android:layout_marginTop="45dp"
            android:layout_marginLeft="215dp"
            tools:ignore="LabelFor" android:layout_marginStart="215dp">
    </EditText>
    <TextView
            android:text="@string/create_event_failed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/fail_message"
            android:textSize="12sp" android:textColor="@color/design_default_color_error"
            android:layout_alignTop="@+id/createingeventbutton" android:layout_marginTop="40dp"
            android:layout_centerInParent="true"
            android:visibility="invisible">
    </TextView>

    <TextView
            android:text="@string/create_event_success"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/success_message"
            android:textSize="12sp" android:textColor="@color/bluee"
            android:layout_alignTop="@+id/createingeventbutton" android:layout_marginTop="40dp"
            android:layout_centerInParent="true"
            android:visibility="invisible">
    </TextView>

</RelativeLayout>