<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".login.ActivityAfterLogin" android:background="#B1D4E0">

    <Button
            android:text="@string/backto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button"
            app:backgroundTint="@color/uoftcoloourr"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView12"/>
    <TextView
            android:text="@string/signupcomp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView11"
            android:fontFamily="@font/catamaran_semibold" android:textSize="30sp"
            android:textColor="@color/uoftcoloourr" android:textColorHint="@color/uoftcoloourr"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="50dp" android:layout_marginStart="50dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="160dp"
            android:layout_marginEnd="50dp" android:layout_marginRight="50dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/ready"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView12"
            android:fontFamily="sans-serif-light" android:textSize="18sp"
            android:textColor="@color/uoftcoloourr" android:textColorHint="@color/uoftcoloourr"
            app:layout_constraintTop_toBottomOf="@+id/textView11" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="50dp" android:layout_marginStart="50dp" android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="-5dp"/>
    <ImageView
            android:contentDescription="@string/nothing"
            android:layout_width="281dp"
            android:layout_height="433dp"
            app:srcCompat="@drawable/pngtreecartoon_hand_drawn_friends_dancing_5049413" android:id="@+id/imageView3"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="50dp" android:layout_marginStart="50dp" android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="112dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>