<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".login.Welcomescreen" android:background="#B1D4E0">
    <TextView
            android:text="@string/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView2"
            android:fontFamily="@font/catamaran_light" android:textSize="40sp"
            android:textColor="@color/uoftcoloourr" android:textColorHint="@color/uoftcoloourr"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="50dp" android:layout_marginStart="50dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="90dp"
            app:layout_constraintBottom_toTopOf="@+id/textView3" android:layout_marginEnd="167dp"
            android:layout_marginRight="167dp" app:layout_constraintEnd_toEndOf="parent"
            android:visibility="visible"/>
    <TextView
            android:text="@string/utinder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView3"
            android:fontFamily="@font/catamaran_semibold" android:textSize="40sp"
            android:textColor="@color/uoftcoloourr" android:textColorHint="@color/uoftcoloourr"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="155dp" android:layout_marginEnd="155dp"
            android:layout_marginTop="-23dp"/>
    <ImageView
            android:contentDescription="@string/nothing"
            android:layout_width="280dp"
            android:layout_height="300dp" app:srcCompat="@drawable/pngtreewoman_teacher_and_students_in_6600138"
            android:id="@+id/imageView5"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp" android:layout_marginEnd="50dp" android:layout_marginRight="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="50dp" app:layout_constraintTop_toBottomOf="@+id/textView2"/>
    <TextView
            android:text="@string/sibal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView4"
            android:fontFamily="@font/catamaran_medium" android:textSize="12sp"
            android:textColor="@color/uoftcoloourr" android:textColorHint="@color/uoftcoloourr"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="100dp" android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp" android:layout_marginRight="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView5"/>

</androidx.constraintlayout.widget.ConstraintLayout>